--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.8.3",
+    "pinia": "^2.0.13",
+    "pinia-shared-state": "^0.2.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.14"
   },
