--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@headlessui/vue": "^1.5.0",
+    "@heroicons/vue": "^1.0.6",
     "core-js": "^3.8.3",
     "pinia": "^2.0.13",
     "pinia-shared-state": "^0.2.3",
