--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.5.0",
     "@heroicons/vue": "^1.0.6",
+    "@tailwindcss/forms": "^0.5.0",
     "core-js": "^3.8.3",
     "pinia": "^2.0.13",
     "pinia-shared-state": "^0.2.3",
