--- a/firebase.json
+++ b/firebase.json
@@ -12,6 +12,10 @@
     ],
     "rewrites": [
       {
+        "source": "/api/**",
+        "function": "api"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
@@ -21,14 +25,14 @@
     "rules": "storage.rules"
   },
   "emulators": {
+    "hosting": {
+      "port": 5000
+    },
     "functions": {
       "port": 5001
     },
     "firestore": {
       "port": 5002
-    },
-    "hosting": {
-      "port": 5000
     },
     "storage": {
       "port": 5003
