--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "postuninstall": "electron-builder install-app-deps",
+    "firebase:serve": "firebase emulators:start"
   },
   "main": "background.js",
   "dependencies": {
     "@headlessui/vue": "^1.5.0",
     "@heroicons/vue": "^1.0.6",
     "@tailwindcss/forms": "^0.5.0",
+    "axios": "^0.26.1",
     "core-js": "^3.8.3",
     "pinia": "^2.0.13",
     "pinia-shared-state": "^0.2.3",
