--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,32 @@
 .DS_Store
+.thumbs.db
 node_modules
-/dist
-*.log
 
-# local env files
-.env.local
-.env.*.local
+# Quasar core related directories
+.quasar
+/dist
+*-flag.d.ts
+
+# Cordova related directories and files
+/src-cordova/node_modules
+/src-cordova/platforms
+/src-cordova/plugins
+/src-cordova/www
+
+# Capacitor related directories and files
+/src-capacitor/www
+/src-capacitor/node_modules
+
+# BEX related directories and files
+/src-bex/www
+/src-bex/js/core
 
 # Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
+*.log
 
 # Editor directories and files
 .idea
-.vscode
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
-*.sw?
-
-#Electron-builder output
-/dist_electron
