--- a/package.json
+++ b/package.json
@@ -1,48 +1,54 @@
 {
   "name": "vezy-worship",
-  "version": "0.1.0",
+  "version": "0.0.1",
+  "description": "VEZ Presentation Software",
+  "productName": "VezyWorship",
+  "author": "Jan-Paul Kleemans <jpkleemans@gmail.com>",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint .",
-    "electron:build": "vue-cli-service electron:build",
-    "electron:serve": "vue-cli-service electron:serve",
-    "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps",
+    "serve": "quasar dev",
+    "build": "quasar build",
+    "lint": "eslint --fix --ext .js,.vue ./",
+    "electron:serve": "quasar dev -m electron",
     "firebase:serve": "firebase emulators:start"
   },
-  "main": "background.js",
   "dependencies": {
-    "@headlessui/vue": "^1.5.0",
-    "@heroicons/vue": "^1.0.6",
-    "@tailwindcss/forms": "^0.5.0",
-    "axios": "^0.26.1",
-    "core-js": "^3.8.3",
+    "@quasar/extras": "^1.0.0",
+    "axios": "^0.21.1",
+    "core-js": "^3.6.5",
     "dayjs": "^1.11.1",
-    "floating-vue": "^2.0.0-beta.15",
-    "pinia": "^2.0.13",
+    "pinia": "^2.0.11",
     "pinia-shared-state": "^0.2.3",
-    "vue": "^3.2.13",
-    "vue-router": "^4.0.14"
+    "quasar": "^2.6.0",
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "@vue/eslint-config-standard": "^6.1.0",
-    "autoprefixer": "^10.4.5",
-    "electron": "^13.0.0",
-    "electron-devtools-installer": "^3.1.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.24",
-    "vue-cli-plugin-electron-builder": "~2.1.1"
+    "@babel/eslint-parser": "^7.13.14",
+    "@quasar/app-webpack": "^3.0.0",
+    "electron": "^18.1.0",
+    "eslint": "^8.10.0",
+    "eslint-config-standard": "^17.0.0-1",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-vue": "^8.5.0",
+    "eslint-webpack-plugin": "^3.1.1"
+  },
+  "browserslist": [
+    "last 10 Chrome versions",
+    "last 10 Firefox versions",
+    "last 4 Edge versions",
+    "last 7 Safari versions",
+    "last 8 Android versions",
+    "last 8 ChromeAndroid versions",
+    "last 8 FirefoxAndroid versions",
+    "last 10 iOS versions",
+    "last 5 Opera versions"
+  ],
+  "engines": {
+    "node": ">= 12.22.1",
+    "npm": ">= 6.13.4",
+    "yarn": ">= 1.21.1"
   }
 }
