--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "pinia-shared-state": "^0.2.3",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0"
+    "vue-router": "^4.0.0",
+    "vue-three-shortkey": "^4.0.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
