--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "@zip.js/zip.js": "^2.4.11",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "dayjs": "^1.11.1",
