Make output displays configurable

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "dayjs": "^1.11.1",
+    "electron-store": "^8.0.2",
     "lodash": "^4.17.21",
     "nanoid": "^3.3.3",
     "pinia": "^2.0.11",
