--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/eslint-parser": "^7.13.14",
     "@quasar/app-webpack": "^3.0.0",
     "electron": "^18.1.0",
+    "electron-builder": "^22.14.13",
     "electron-packager": "^15.5.1",
     "eslint": "^8.10.0",
     "eslint-config-standard": "^17.0.0-1",
