--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "functions",
+  "name": "vezy-worship-api",
   "description": "Cloud Functions for Firebase",
   "scripts": {
     "serve": "firebase emulators:start --only functions",
@@ -15,7 +15,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.18.0"
+    "firebase-functions": "^3.21.2"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
