--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vezy-worship",
-  "version": "1.4.1",
+  "version": "1.5.0-beta",
   "description": "Presentatiesoftware voor beamer én livestream",
   "productName": "VezyWorship",
   "author": "Jan-Paul Kleemans <jpkleemans@gmail.com>",
