update dependencies & dev local emulator firestore from production

--- a/package.json
+++ b/package.json
@@ -11,38 +11,41 @@
     "lint": "eslint --fix --ext .js,.vue ./",
     "electron:serve": "quasar dev -m electron",
     "electron:build": "quasar build -m electron",
-    "api:serve": "firebase emulators:start"
+    "api:serve": "firebase emulators:start",
+    "api:serve-data": "firebase emulators:start --import ./dev/export-firestore",
+    "api:get-data": "powershell ./dev/emulator-get-data.ps1",
+    "api:update-data": "powershell ./dev/emulator-update-data.ps1"
   },
   "dependencies": {
-    "@quasar/extras": "^1.15.10",
-    "@zip.js/zip.js": "^2.4.11",
-    "axios": "^0.21.1",
-    "core-js": "^3.6.5",
-    "dayjs": "^1.11.1",
-    "electron-store": "^8.0.2",
+    "@quasar/extras": "^1.16.4",
+    "@zip.js/zip.js": "^2.7.17",
+    "axios": "^0.27.2",
+    "core-js": "^3.31.0",
+    "dayjs": "^1.11.9",
+    "electron-store": "^8.1.0",
     "lodash": "^4.17.21",
-    "nanoid": "^3.3.3",
-    "pinia": "^2.0.11",
-    "pinia-shared-state": "^0.2.3",
-    "quasar": "^2.11.5",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0",
-    "vue-three-shortkey": "^4.0.0",
+    "nanoid": "^4.0.2",
+    "pinia": "^2.1.4",
+    "pinia-shared-state": "^0.4.5",
+    "quasar": "^2.12.2",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.2",
+    "vue-three-shortkey": "^4.0.1",
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.13.14",
-    "@quasar/app-webpack": "^3.7.1",
-    "electron": "^18.1.0",
-    "electron-builder": "^22.14.13",
-    "electron-packager": "^15.5.1",
-    "eslint": "^8.10.0",
-    "eslint-config-standard": "^17.0.0-1",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-vue": "^8.5.0",
-    "eslint-webpack-plugin": "^3.1.1"
+    "@babel/eslint-parser": "^7.22.5",
+    "@quasar/app-webpack": "^3.9.2",
+    "electron": "^25.2.0",
+    "electron-builder": "^24.4.0",
+    "electron-packager": "^17.1.1",
+    "eslint": "^8.44.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^16.0.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-vue": "^9.15.1",
+    "eslint-webpack-plugin": "^4.0.1"
   },
   "browserslist": [
     "last 10 Chrome versions",
