update dependencies & electron debug

--- a/package.json
+++ b/package.json
@@ -11,35 +11,36 @@
     "lint": "eslint --fix --ext .js,.vue ./",
     "electron:serve": "quasar dev -m electron",
     "electron:build": "quasar build -m electron",
+    "electron:build-debug": "quasar build -m electron -d",
     "api:serve": "firebase emulators:start",
     "api:serve-data": "firebase emulators:start --import ./dev/export-firestore",
     "api:get-data": "powershell ./dev/emulator-get-data.ps1",
     "api:update-data": "powershell ./dev/emulator-update-data.ps1"
   },
   "dependencies": {
-    "@quasar/extras": "^1.16.4",
-    "@zip.js/zip.js": "^2.7.17",
+    "@quasar/extras": "^1.16.5",
+    "@zip.js/zip.js": "^2.7.20",
     "axios": "^0.27.2",
-    "core-js": "^3.31.0",
+    "core-js": "^3.31.1",
     "dayjs": "^1.11.9",
     "electron-store": "^8.1.0",
     "lodash": "^4.17.21",
     "nanoid": "^4.0.2",
     "pinia": "^2.1.4",
     "pinia-shared-state": "^0.4.5",
-    "quasar": "^2.12.2",
+    "quasar": "^2.12.3",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.2",
+    "vue-router": "^4.2.4",
     "vue-three-shortkey": "^4.0.1",
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.22.5",
+    "@babel/eslint-parser": "^7.22.9",
     "@quasar/app-webpack": "^3.9.2",
-    "electron": "^25.2.0",
+    "electron": "^25.3.0",
     "electron-builder": "^24.4.0",
     "electron-packager": "^17.1.1",
-    "eslint": "^8.44.0",
+    "eslint": "^8.45.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^16.0.1",
