tijdelijk release build v*
tbv controle werking en bestandsnaam

--- a/.github/workflows/electron-deploy.yml
+++ b/.github/workflows/electron-deploy.yml
@@ -31,7 +31,7 @@ jobs:
         run: npm ci
       - name: Build app
         if: github.ref != 'refs/heads/dev'
-        run: npm run electron:build
+        run: npm run electron:release
       - name: Build & deploy app
         if: github.ref == 'refs/heads/dev'
         env:
