save local database location

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dayjs": "^1.11.9",
     "electron-store": "^8.1.0",
     "electron-updater": "^6.1.1",
+    "idb-keyval": "^6.2.1",
     "lodash": "^4.17.21",
     "nanoid": "^4.0.2",
     "pinia": "^2.1.4",
