develop branch v* -> dev*
Anders bestaat branch bij releasen al en kan releas niet gepubliceerd worden. (verschillende namen zijn.)

--- a/.github/workflows/electron-deploy.yml
+++ b/.github/workflows/electron-deploy.yml
@@ -4,10 +4,10 @@ on:
   push:
     branches:
       - dev
-      - v[0-9].*
+      - dev[0-9].*
   pull_request:
     branches:
-      - v[0-9].*
+      - dev[0-9].*
 
 jobs:
   build:
