--- a/firebase.json
+++ b/firebase.json
@@ -9,7 +9,10 @@
     "rewrites": [
       {
         "source": "/api/**",
-        "function": "api"
+        "function": {
+          "functionId": "api",
+          "region": "europe-west1"
+        }
       },
       {
         "source": "**",
