api algoliasearch + testknop consolelog

--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "algoliasearch": "^4.19.1",
     "axios": "^1.4.0",
     "firebase-admin": "^11.10.1",
     "firebase-functions": "^4.4.1"
