--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -21,7 +21,9 @@ jobs:
       - name: Create Functions env file
         run: |
           cd api
-          echo "TESTENV=testenEnv" > .env
+          echo "TESTENV=testenEnv\n" > .env
+          ls -l
+          cat .env
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
