--- a/api/package.json
+++ b/api/package.json
@@ -14,12 +14,13 @@
   "main": "index.js",
   "dependencies": {
     "algoliasearch": "^4.22.0",
-    "axios": "^1.6.3",
-    "firebase-admin": "^11.11.1",
-    "firebase-functions": "^4.5.0"
+    "axios": "^1.6.5",
+    "firebase-admin": "11.11.1",
+    "firebase-functions": "^4.6.0"
   },
   "devDependencies": {
-    "firebase-functions-test": "^3.1.0"
+    "firebase-functions-test": "^3.1.0",
+    "firebase-tools": "^13.0.2"
   },
   "private": true
 }
