--- a/api/package.json
+++ b/api/package.json
@@ -13,14 +13,13 @@
   },
   "main": "index.js",
   "dependencies": {
-    "algoliasearch": "^4.22.0",
-    "axios": "^1.6.5",
+    "algoliasearch": "^4.22.1",
+    "axios": "^1.6.7",
     "firebase-admin": "11.11.1",
-    "firebase-functions": "^4.6.0"
+    "firebase-functions": "^4.7.0"
   },
   "devDependencies": {
-    "firebase-functions-test": "^3.1.0",
-    "firebase-tools": "^13.0.2"
+    "firebase-functions-test": "^3.1.1"
   },
   "private": true
 }
