dep electron-store back to 8.2.0

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "axios": "^1.7.2",
     "core-js": "^3.37.1",
     "dayjs": "^1.11.11",
-    "electron-store": "^9.0.0",
-    "electron-updater": "^6.1.8",
+    "electron-store": "8.2.0",
+    "electron-updater": "^6.2.1",
     "idb-keyval": "^6.2.1",
     "lodash": "^4.17.21",
     "nanoid": "^5.0.7",
