--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -27,5 +27,4 @@ jobs:
         with:
           args: deploy --only hosting,functions
         env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-          PROJECT_ID: vezy-worship
+          GCP_SA_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_VEZY_WORSHIP }}
