--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ node_modules
 # Quasar core related directories
 .quasar
 /dist
+/quasar.config.*.temporary.compiled*
 *-flag.d.ts
 
 # Cordova related directories and files
@@ -17,11 +18,10 @@ node_modules
 /src-capacitor/www
 /src-capacitor/node_modules
 
-# BEX related directories and files
-/src-bex/www
-/src-bex/js/core
-
 # Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 *.log
 
 # Editor directories and files
@@ -31,3 +31,6 @@ node_modules
 *.ntvs*
 *.njsproj
 *.sln
+
+# local .env files
+.env.local*
